--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "chameleon/laravel-gelf",
     "description": "Laravel Gelf",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7.1.0",
         "illuminate/support": "5.7.*",
