--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "illuminate/support": "~5.6 || ~5.7 || ~5.8 || ~6.0 || ~7.0 || ~8.0",
+        "illuminate/support": "~5.6 || ~5.7 || ~5.8 || ~6.0 || ~7.0 || ~8.0 || ~9.0",
         "graylog2/gelf-php": "1.*",
         "monolog/monolog": "^1.12"
     },
