--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=7.1.0",
         "illuminate/support": "~5.6 || ~5.7 || ~5.8 || ~6.0 || ~7.0 || ~8.0 || ~9.0",
         "graylog2/gelf-php": "1.*",
-        "monolog/monolog": "^1.12"
+        "monolog/monolog": "1.* || 2.*"
     },
     "autoload": {
         "psr-4": {
